[gd_scene load_steps=21 format=3 uid="uid://cmy37se1eftx5"]

[ext_resource type="Script" path="res://Game/game.gd" id="1_kwjqk"]
[ext_resource type="PackedScene" uid="uid://th16pgoey6cn" path="res://Story/story.tscn" id="2_j8fbq"]
[ext_resource type="Texture2D" uid="uid://igoln0gkandl" path="res://Sprites/ore.png" id="2_x8tux"]
[ext_resource type="Texture2D" uid="uid://c0gqf4f8bl0gg" path="res://Sprites/face.png" id="3_2yn8o"]
[ext_resource type="PackedScene" uid="uid://bxrtem6odvnkt" path="res://Game/map.tscn" id="3_lhe3l"]
[ext_resource type="PackedScene" uid="uid://dloyo66yjhorf" path="res://Game/code.tscn" id="4_i2lnj"]
[ext_resource type="Texture2D" uid="uid://ggiv761i8gcw" path="res://Sprites/crack.png" id="4_xf1eo"]
[ext_resource type="Texture2D" uid="uid://cuhbshsfp2nv1" path="res://Sprites/equipment.png" id="5_pb8ny"]
[ext_resource type="Texture2D" uid="uid://d3e2eqksejcw6" path="res://Sprites/wall.png" id="6_tjkox"]
[ext_resource type="Texture2D" uid="uid://ewmhcocdwkc4" path="res://Sprites/secret.png" id="7_ljnee"]
[ext_resource type="Texture2D" uid="uid://cvy4k4m4a6ai0" path="res://Sprites/cave_enter.png" id="8_l1a2k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5njku"]
bg_color = Color(0.0862745, 0.0980392, 0.145098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vmm4g"]
bg_color = Color(0.439216, 0.47451, 0.54902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h6cyi"]
bg_color = Color(0.439216, 0.47451, 0.54902, 1)

[sub_resource type="SystemFont" id="SystemFont_e8vuh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pqsvn"]
bg_color = Color(0.454902, 0.658824, 0.494118, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gfds6"]
bg_color = Color(0.854902, 0.823529, 0.737255, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hk222"]
bg_color = Color(0.439216, 0.47451, 0.54902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_766o5"]
bg_color = Color(0.247059, 0.309804, 0.380392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6hb7x"]
bg_color = Color(0.419608, 0.611765, 0.768627, 1)

[node name="Game" type="Node"]
script = ExtResource("1_kwjqk")

[node name="Background" type="PanelContainer" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_5njku")

[node name="TextContainers" type="MarginContainer" parent="Background"]
layout_mode = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 0

[node name="TextPanels" type="VBoxContainer" parent="Background/TextContainers"]
layout_mode = 2
theme_override_constants/separation = 35

[node name="TitleMargin" type="MarginContainer" parent="Background/TextContainers/TextPanels"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_right = 200

[node name="TitlePanel" type="PanelContainer" parent="Background/TextContainers/TextPanels/TitleMargin"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vmm4g")

[node name="TitleText" type="RichTextLabel" parent="Background/TextContainers/TextPanels/TitleMargin/TitlePanel"]
layout_mode = 2
theme_override_constants/text_highlight_h_padding = 10
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]Point A[/center]"
scroll_active = false

[node name="BodyPanel" type="PanelContainer" parent="Background/TextContainers/TextPanels"]
custom_minimum_size = Vector2(0, 480)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h6cyi")

[node name="BodyMargin" type="MarginContainer" parent="Background/TextContainers/TextPanels/BodyPanel"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 270
theme_override_constants/margin_bottom = 120

[node name="BodyText" type="RichTextLabel" parent="Background/TextContainers/TextPanels/BodyPanel/BodyMargin"]
layout_mode = 2
theme_override_constants/line_separation = 10
theme_override_fonts/normal_font = SubResource("SystemFont_e8vuh")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "\"I don't get it, there shouldn't be anyone else down here.\"
You stare at the picture you recieved, still in disbelief.

Tommy's voice crackles through the speaker, his urgency palpable.
\"Well I know what I saw, and now you see it too. I'm going to go down there.\" 
There was a short pause, before Tommy spoke again.
\"I have to do this, but just making sure, I won't get fired for this right? If anything happens, you could just write, 'got lost' in your report couldn't you?\" 
He chuckes, clearly trying to lighten the mood."
scroll_following = true

[node name="PictureContainers" type="MarginContainer" parent="Background"]
layout_mode = 2
theme_override_constants/margin_left = 850
theme_override_constants/margin_top = 170
theme_override_constants/margin_right = 103
theme_override_constants/margin_bottom = 0

[node name="PicturePanels" type="VBoxContainer" parent="Background/PictureContainers"]
layout_mode = 2
theme_override_constants/separation = 35

[node name="PhotoPanel" type="PanelContainer" parent="Background/PictureContainers/PicturePanels"]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pqsvn")

[node name="Ore" type="Sprite2D" parent="Background/PictureContainers/PicturePanels/PhotoPanel"]
visible = false
texture = ExtResource("2_x8tux")
centered = false

[node name="Face" type="Sprite2D" parent="Background/PictureContainers/PicturePanels/PhotoPanel"]
visible = false
texture = ExtResource("3_2yn8o")
centered = false

[node name="Crack" type="Sprite2D" parent="Background/PictureContainers/PicturePanels/PhotoPanel"]
visible = false
texture = ExtResource("4_xf1eo")
centered = false

[node name="Equipment" type="Sprite2D" parent="Background/PictureContainers/PicturePanels/PhotoPanel"]
visible = false
texture = ExtResource("5_pb8ny")
centered = false

[node name="Wall" type="Sprite2D" parent="Background/PictureContainers/PicturePanels/PhotoPanel"]
visible = false
texture = ExtResource("6_tjkox")
centered = false

[node name="Secret" type="Sprite2D" parent="Background/PictureContainers/PicturePanels/PhotoPanel"]
visible = false
texture = ExtResource("7_ljnee")
centered = false

[node name="CaveEnter" type="Sprite2D" parent="Background/PictureContainers/PicturePanels/PhotoPanel"]
visible = false
texture = ExtResource("8_l1a2k")
centered = false

[node name="MapPanel" type="PanelContainer" parent="Background/PictureContainers/PicturePanels"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gfds6")

[node name="NumberMap" type="RichTextLabel" parent="Background/PictureContainers/PicturePanels/MapPanel"]
z_index = 2
z_as_relative = false
layout_mode = 2
theme_override_constants/text_highlight_h_padding = 10
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = " 1"
scroll_active = false

[node name="ChoiceMargin" type="MarginContainer" parent="."]
offset_left = 80.0
offset_top = 125.0
offset_right = 1072.0
offset_bottom = 605.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 355
theme_override_constants/margin_right = 270
theme_override_constants/margin_bottom = 20

[node name="ChoiceContainer" type="PanelContainer" parent="ChoiceMargin"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hk222")

[node name="ChoiceButtons" type="VBoxContainer" parent="ChoiceMargin"]
layout_mode = 2

[node name="ChoiceButton" type="Button" parent="ChoiceMargin/ChoiceButtons"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_766o5")
theme_override_styles/hover = SubResource("StyleBoxFlat_6hb7x")
shortcut_feedback = false
shortcut_in_tooltip = false

[node name="ChoiceButton2" type="Button" parent="ChoiceMargin/ChoiceButtons"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_766o5")
theme_override_styles/hover = SubResource("StyleBoxFlat_6hb7x")
shortcut_feedback = false
shortcut_in_tooltip = false

[node name="TextTimer" type="Timer" parent="."]
wait_time = 0.035
autostart = true

[node name="DotTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="TalkTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Story" parent="." instance=ExtResource("2_j8fbq")]

[node name="Map" parent="." instance=ExtResource("3_lhe3l")]
position = Vector2(850, 385)
scale = Vector2(5, 5)

[node name="Code" parent="." instance=ExtResource("4_i2lnj")]

[node name="Dot" parent="Code" index="2"]
position = Vector2(160, 506)

[node name="Empty" parent="Code" index="3"]
position = Vector2(190, 506)

[connection signal="pressed" from="ChoiceMargin/ChoiceButtons/ChoiceButton" to="." method="_on_choice_button_pressed"]
[connection signal="pressed" from="ChoiceMargin/ChoiceButtons/ChoiceButton2" to="." method="_on_choice_button_2_pressed"]
[connection signal="timeout" from="TextTimer" to="." method="_on_text_timer_timeout"]
[connection signal="timeout" from="DotTimer" to="." method="_on_dot_timer_timeout"]
[connection signal="timeout" from="TalkTimer" to="." method="_on_talk_timer_timeout"]
[connection signal="code_sent" from="Code" to="Map/SubViewportContainer/CaveView" method="_on_code_code_sent"]

[editable path="Map"]
[editable path="Map/SubViewportContainer/CaveView"]
[editable path="Code"]
